k8s/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: itus-ns
  labels:
    app: frontend-label
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend-label
  template:
    metadata:
      labels:
        app: frontend-label
    spec:
      containers:
      - name: frontend
        image: sach990p/itus-frontend:ef50cb2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
