k8s/psql-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: psql-deployment
  namespace: itus-ns
  labels:
    app: psql-label
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: psql-label

  template:
    metadata:
      labels:
        app: psql-label
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports: 
          - containerPort: 5432
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          
          readinessProbe:
              exec:
                command: ["pg_isready", "-U", "bankuser", "-d", "bankappdb"]
              initialDelaySeconds: 15
              periodSeconds: 10
          livenessProbe:
              exec:
                command: ["pg_isready", "-U", "bankuser", "-d", "bankappdb"]
              initialDelaySeconds: 30
              periodSeconds: 10
              failureThreshold: 5

          volumeMounts:
              - name: psql-storage
                mountPath: /var/lib/postgresql/data

      volumes:
        - name: psql-storage
          persistentVolumeClaim:
            claimName: psql-pvc
