k8s/services.yml
apiVersion: v1
kind: Service
metadata: 
  name: psql-svc
  namespace: itus-ns
spec:
  selector:
    app: psql-label
  ports:
    - port: 5432
---
apiVersion: v1
kind: Service
metadata: 
  name: backend-svc
  namespace: itus-ns
spec:
  selector:
    app: backend-label
  ports:
    - port: 8080
---
apiVersion: v1
kind: Service
metadata: 
  name: frontend-svc
  namespace: itus-ns
spec:
  selector: 
    app: frontend-label
  # sessionAffinity: ClientIP
  # sessionAffinityConfig:
  #   clientIP:
  #     timeoutSeconds: 3600
  # ports:
  #   - port: 3000
  #     nodePort: 30080
  # type: NodePort
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata: 
  name: ollama-svc
  namespace: itus-ns
spec:
  selector:
    app: ollama-label
  ports:
    - port: 11434
